tests/fixtures/errors/e0302_duplicate_conn.mimz
// expect: E0302
module FA {
  in a: bit
  in b: bit
  out s: bit
  s = a ^ b
}
module M {
  in x: bit
  out y: bit
  let u = FA() { a: x, a: x, b: x }
  y = u.s
}
